[gd_scene load_steps=24 format=2]

[ext_resource path="res://scenes/levels/Title.gd" type="Script" id=1]
[ext_resource path="res://music/music/Ｓｔｅｖｉａ﻿ＤＸ - II - 01 Packing your things.ogg" type="AudioStream" id=2]
[ext_resource path="res://scenes/Transition.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/TitleControl.gd" type="Script" id=4]
[ext_resource path="res://scenes/GhostTitle.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/title.png" type="Texture" id=6]
[ext_resource path="res://music/sounds/intro.wav" type="AudioStream" id=7]
[ext_resource path="res://fonts/Kenney Pixel.ttf" type="DynamicFontData" id=8]

[sub_resource type="Shader" id=1]
code = "shader_type spatial;

uniform vec3 em = vec3(0,0,0);

void  fragment() {
	EMISSION = em;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/em = Vector3( 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 1 )
shader_param/em = Vector3( 1, 0, 0 )

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 1 )
shader_param/em = Vector3( 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 1 )
shader_param/em = Vector3( 1, 0, 0 )

[sub_resource type="Shader" id=10]
code = "shader_type spatial;

uniform vec3 em = vec3(0,0,0);

void  fragment() {
	EMISSION = em;
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 10 )
shader_param/em = Vector3( 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 10 )
shader_param/em = Vector3( 1, 0, 0 )

[sub_resource type="Shader" id=7]
code = "shader_type spatial;
render_mode diffuse_toon, cull_front;

void  fragment() {
	vec2 p = UV*2.0-vec2(1,1.06);
	float sun_size = 0.05/length(p);
	vec3 sky = mix(vec3(0.025, 0.1, 0.4), vec3(0.0,0.0, 0.0), (p.y));
	vec3 sun = vec3(1.0, 0.0, 1.0);
	EMISSION = mix(sky, sun, sun_size);
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )

[sub_resource type="Environment" id=9]
background_mode = 1
glow_enabled = true
glow_bloom = 1.0
glow_blend_mode = 0

[sub_resource type="Animation" id=13]
resource_name = "in"
length = 4.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.54 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 469, 264 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.54 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1024, 576 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../TextureRect2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3.51, 3.55 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../TextureRect2:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 3.57, 4 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 16.95, 10.33 ) ]
}

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFont" id=15]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=16]
resource_name = "blink"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
fov = 65.0
near = 0.1
far = 39.0

[node name="ImmediateGeometry" type="ImmediateGeometry" parent="."]
material_override = SubResource( 2 )

[node name="ImmediateGeometry2" type="ImmediateGeometry" parent="."]
material_override = SubResource( 3 )

[node name="ImmediateGeometry3" type="ImmediateGeometry" parent="."]
material_override = SubResource( 4 )

[node name="ImmediateGeometry4" type="ImmediateGeometry" parent="."]
material_override = SubResource( 5 )

[node name="ImmediateGeometry5" type="ImmediateGeometry" parent="."]
material_override = SubResource( 6 )

[node name="ImmediateGeometry6" type="ImmediateGeometry" parent="."]
material_override = SubResource( 11 )

[node name="ImmediateGeometry7" type="ImmediateGeometry" parent="."]
material_override = SubResource( 8 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="Transition" parent="." instance=ExtResource( 3 )]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
ghost_scene = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -432.0
margin_right = -16.0002
margin_bottom = -432.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/TextureRect"]
anims/in = SubResource( 13 )

[node name="Timer" type="Timer" parent="Control"]
wait_time = 0.1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 7 )
volume_db = -14.345
pitch_scale = 0.5

[node name="TextureRect2" type="TextureRect" parent="Control"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.95
margin_top = 10.33
margin_right = 16.7207
margin_bottom = 10.21
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = 176.0
margin_right = 219.0
margin_bottom = 224.0
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
text = "Press Space to Continue"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Label"]
anims/blink = SubResource( 16 )

[connection signal="animation_finished" from="Control/TextureRect/AnimationPlayer" to="Control" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Control/Timer" to="Control" method="_on_Timer_timeout"]
